# sky

./: .gitignore  CLAUDE.md  NOTICE.md  README.md  package-lock.json  package.json  sky-compiler.cabal
.github/workflows/: ci.yml
app/: Main.hs
docs/: KNOWN_LIMITATIONS.md  development.md  getting-started.md  sky-toml.md  stdlib.md  v012-typed-codegen-plan.md  v013-diagnostics-architecture.md  v013-gap4-blocker.md
docs/archive/: AUDIT_REMEDIATION.md  FFI_BOUNDARY_FIXES.md  NEXT_SESSION_BRIEF.md  PRODUCTION_READINESS.md  README.md  TYPED_CODEGEN_GAPS.md  TYPED_CODEGEN_SESSION_STATE.md  V0.10.0_PR_SUMMARY.md  V013_TYPED_CODEGEN_COMPLETION.md  legacy-README.md  sky-live-components.md  sky-live-unified.md  sky-live.md  std-ui-cross-platform.md  tea-backends.md  typed-codegen-design.md  v013-a4-mono-design.md  v013-diagnostics-architecture.md  v1-soundness-audit.md
docs/compiler/: architecture.md  journey.md  pipeline.md  runtime-verification.md  versions.md
docs/design/: sky-tui-coverage.md
docs/errors/: error-system.md
docs/ffi/: boundary-philosophy.md  ffi-design.md  go-interop.md
docs/language/: modules.md  pattern-matching.md  syntax.md  types.md
docs/skyauth/: overview.md
docs/skydb/: overview.md
docs/skylive/: architecture.md  input-authority-protocol.md  overview.md
docs/skytui/: overview.md
docs/skyui/: overview.md
docs/tooling/: cli.md  lsp.md  testing.md
examples/02-go-stdlib/src/: Main.sky
examples/03-tea-external/src/: Main.sky
examples/04-local-pkg/src/: Main.sky
examples/05-mux-server/src/: Main.sky
examples/06-json/src/: Main.sky
examples/07-todo-cli/src/: Main.sky
examples/08-notes-app/src/: Main.sky
examples/08-notes-app/src/Lib/: Auth.sky  Db.sky  View.sky
examples/09-live-counter/src/: Main.sky
examples/10-live-component/src/: Counter.sky  Main.sky
examples/11-fyne-stopwatch/src/: Main.sky
examples/12-skyvote/src/: Main.sky
examples/12-skyvote/src/Lib/: Auth.sky  AuthHandlers.sky  Comments.sky  Db.sky  Ideas.sky
examples/12-skyvote/src/Page/: About.sky  AuthPage.sky  Board.sky  Detail.sky  Roadmap.sky  Submit.sky
examples/12-skyvote/src/Ui/: Components.sky  Layout.sky  Styles.sky
examples/13-skyshop/: sky.toml
examples/13-skyshop/src/: Main.sky  State.sky
examples/13-skyshop/src/Lib/: Auth.sky  Cart.sky  Db.sky  Money.sky  Notify.sky  OAuth.sky  Products.sky  Stripe.sky
examples/13-skyshop/src/Page/: Admin.sky  AuthPage.sky  CartPage.sky  Home.sky  Orders.sky  Product.sky  Static.sky
examples/13-skyshop/src/Ui/: Layout.sky
examples/14-task-demo/src/: Main.sky
examples/15-http-server/src/: Main.sky
examples/16-skychess/src/: Main.sky  State.sky
examples/16-skychess/src/Chess/: Eval.sky  Move.sky
examples/16-skychess/src/Lib/: GameLogic.sky  Games.sky
examples/16-skychess/src/Page/: Game.sky  Home.sky
examples/16-skychess/tests/: ChessPrimitivesTest.sky
examples/17-skymon/src/: Main.sky
examples/18-job-queue/src/: Main.sky
examples/19-skyforum/src/: Main.sky  State.sky  Update.sky
examples/19-skyforum/test-fixtures/: heap-bound-fence.sky
examples/20-cli-counter/: sky.toml
examples/20-cli-counter/src/: Main.sky
examples/21-tui-stopwatch/: sky.toml
examples/21-tui-stopwatch/src/: Main.sky
examples/22-tui-stopwatch-ui/: sky.toml
examples/22-tui-stopwatch-ui/src/: Main.sky
examples/23-tui-todo/: sky.toml
examples/23-tui-todo/src/: Main.sky
examples/24-tui-kitchen-sink/: sky.toml
examples/24-tui-kitchen-sink/src/: Main.sky
runtime-go/: go.mod  go.sum
runtime-go/rt/: adapt_curried_target_test.go  as_list_t_any_test.go  as_map_any_test.go  cli.go  coerce_map_to_struct_test.go  db_auth.go  lazy.go  lazy_test.go  live.go  live_file_event_test.go  live_input_preservation_test.go  live_sse_handshake_test.go  live_status_test.go  live_store.go  live_store_roundtrip_test.go  live_textarea_diff_test.go  live_unknown_msg_test.go  rt.go  stdlib_web.go  tea_subs.go  tui.go  tui_decode_test.go  tui_editor_test.go  tui_event_unwrap_test.go  tui_input_track_test.go  tui_safety.go  tui_safety_test.go  tui_sanitize.go  tui_sanitize_test.go  tui_scroll_test.go  tui_ui.go  tui_warn.go  tui_width.go  tui_width_test.go  tui_wrap.go  tui_wrap_test.go  tuple_dispatch_test.go  vnode_helpers_test.go
runtime-rust/: BUGFIX-PLAN.md  CLAUDE.md  README.md  SKYRUST-PLAN.md
runtime-rust/sky-runtime-rust/: Cargo.toml
runtime-rust/sky-runtime-rust/src/: lib.rs
runtime-rust/tests/basics/: Test.sky
scripts/: install-git-hooks.sh  lsp-test-nvim.lua  lsp-test-nvim.sh  lsp-test-skyshop.lua  playwright-live-verify.mjs  preflight-tag.sh  skyvote-click-unauth.mjs  skyvote-hammer.mjs  sweep-live-deep.mjs  verify-all-web.sh  verify-cli.sh  verify-examples.mjs  verify-examples.sh  verify-live-app.mjs  verify-scenarios.mjs
sky-stdlib/Sky/Core/: Basics.sky  List.sky  Maybe.sky  Result.sky
sky-stdlib/Std/: Css.sky  Html.sky  Ui.sky
sky-stdlib/Std/Html/: Attributes.sky  Events.sky
sky-stdlib/Std/Ui/: Events.sky  Input.sky  Lazy.sky
src/Sky/Canonicalise/: Environment.hs  Module.hs
src/Sky/Cli/: Watch.hs
src/Sky/Generate/Go/: Builder.hs  (+3 more)
src/Sky/Lsp/: Diag.hs  Index.hs  Server.hs
src/Sky/Parse/: Module.hs
src/Sky/Reporting/: Diagnostic.hs  Lsp.hs  Render.hs
src/Sky/Sky/: Toml.hs
src/Sky/Type/: Solve.hs  Unify.hs
templates/: CLAUDE.md
test/: Spec.hs
test-files/: html-test.sky  live-counter.sky  live-mini.sky  live-ticker.sky  parser-complete.sky
test/Sky/Canonicalise/: UnboundSpec.hs
test/Sky/Cli/: WatchSpec.hs
test/Sky/Diagnostics/: CoverageSpec.hs
test/Sky/Lsp/: CompletionSpec.hs  DiagnosticsSpec.hs  Harness.hs  HoverTypesSpec.hs  NvimDriverSpec.hs  ScaleSpec.hs
test/Sky/Parse/: MultiLineExposingSpec.hs
test/Sky/Reporting/: DiagnosticSpec.hs
test/Sky/Type/: InstanceCaptureSpec.hs  UfCycleGuardSpec.hs
test/fixtures/diagnostics/: non-exhaustive.sky  parse-error.sky  type-mismatch.sky  unbound-name.sky
test/fixtures/issue52-listdrop/: sky.toml
test/fixtures/issue52-recupd/: sky.toml
test/fixtures/unbound-paren/: sky.toml
tools/sky-ffi-inspect/: main.go
(+32 files in other folders)
