cabal-version: 2.4
name:          sky-compiler
-- Cabal requires a numeric version. We intentionally pin to 0.0.0 so
-- it's never confused with a release tag — the real version lives in
-- app/VERSION (kept as "dev" in git, overwritten by CI before
-- release builds). `sky --version` reads app/VERSION via Template
-- Haskell and ignores this field entirely.
version:       0.0.0
synopsis:      Sky language compiler — pure-functional, ML-family, compiles to typed Go
license:       Apache-2.0
license-file:  LICENSE
copyright:     Copyright 2025-2026 Anzel Lai
author:        Anzel Lai
build-type:    Simple

-- Embedded templates (via Data.FileEmbed) + runtime sources must be
-- shipped in the cabal sdist so `cabal install` works from a tarball.
-- LICENSE + NOTICE travel with the sdist so the binary distribution
-- carries the licence + attribution required by Apache-2.0 §4(a, c, d).
extra-source-files:
    LICENSE
    NOTICE.md
    templates/CLAUDE.md
    runtime-go/go.mod
    runtime-go/go.sum
    runtime-go/rt/*.go
    sky-stdlib/Sky/Core/*.sky
    sky-stdlib/Sky/*.sky
    sky-stdlib/Std/*.sky
    sky-stdlib/Std/Ui/*.sky
    sky-stdlib/Std/Html/*.sky
    tools/sky-ffi-inspect/main.go
    tools/sky-ffi-inspect/go.mod
    tools/sky-ffi-inspect/go.sum
    app/VERSION

executable sky
  main-is:          Main.hs
  hs-source-dirs:   app, src
  default-language: Haskell2010
  ghc-options:
    -O2 -rtsopts -threaded
    -Wall -Wno-name-shadowing -Wno-unused-matches -Wno-unused-imports
    -Wno-missing-signatures -Wno-incomplete-patterns

  build-depends:
    base >= 4.14 && < 5,
    bytestring >= 0.11,
    containers >= 0.6,
    directory >= 1.3,
    filepath >= 1.4,
    mtl >= 2.2,
    process >= 1.6,
    text >= 1.2,
    time >= 1.9,
    vector >= 0.12,
    binary >= 0.8,
    utf8-string >= 1.0,
    optparse-applicative >= 0.17,
    aeson >= 2.0,
    async >= 2.2,
    cryptohash-sha256 >= 0.11,
    ansi-terminal >= 0.11,
    file-embed >= 0.0.15,
    template-haskell >= 2.18,
    temporary >= 1.3

  -- POSIX signals are POSIX-only. Used by Sky.Cli.Watch to forward
  -- SIGTERM into the same UserInterrupt-based clean-exit path that
  -- Ctrl-C goes through. Windows has no SIGTERM in the POSIX sense
  -- (terminateProcess on Windows is unconditional already), so we
  -- conditionally skip the dependency + the corresponding handler
  -- via CPP guards inside Sky.Cli.Watch.
  if !os(windows)
    build-depends: unix >= 2.7

  autogen-modules: Paths_sky_compiler
  other-modules:
    Paths_sky_compiler
    -- Data (copied from Elm)

    -- AST
    Sky.AST.Source
    Sky.AST.Canonical

    -- Parser
    Sky.Parse.Primitives
    Sky.Parse.Space
    Sky.Parse.Keyword
    Sky.Parse.Symbol
    Sky.Parse.Variable
    Sky.Parse.Number
    Sky.Parse.String
    Sky.Parse.Type
    Sky.Parse.Pattern
    Sky.Parse.Expression
    Sky.Parse.Declaration
    Sky.Parse.Module

    -- Canonicalisation
    Sky.Canonicalise.Module
    Sky.Canonicalise.Environment
    Sky.Canonicalise.Expression
    Sky.Canonicalise.Pattern
    Sky.Canonicalise.Type

    -- Type system
    Sky.Type.UnionFind
    Sky.Type.Occurs
    Sky.Type.Type
    Sky.Type.Unify
    Sky.Type.Solve
    Sky.Type.Instantiate
    Sky.Type.Constrain.Module
    Sky.Type.Constrain.Expression
    Sky.Type.Constrain.Pattern

    -- Optimisation

    -- Exhaustiveness
    Sky.Type.Exhaustiveness

    -- Go code generation
    Sky.Generate.Go.Ir
    Sky.Generate.Go.Builder
    Sky.Generate.Go.Type
    Sky.Generate.Go.Kernel
    Sky.Generate.Go.Record

    -- Rust code generation
    Sky.Generate.Rust.Builder

    -- FFI

    -- Formatter
    Sky.Format.Format
    Sky.Format.Doc

    -- LSP
    Sky.Lsp.Diag
    Sky.Lsp.Index
    Sky.Lsp.Server

    -- Build system
    Sky.Build.ModuleGraph
    Sky.Build.Compile
    Sky.Build.Dce
    Sky.Build.EmbeddedRuntime
    Sky.Build.EmbeddedInspector
    Sky.Build.FfiGen
    Sky.Build.FfiRegistry
    Sky.Build.FfiTypeParser
    Sky.Build.FfiTypeResolve
    Sky.Build.SkyDeps
    Sky.Build.Validator
    Sky.Build.Monomorphise

    -- Reporting
    Sky.Reporting.Annotation
    Sky.Reporting.Diagnostic
    Sky.Reporting.Render
    Sky.Reporting.Lsp

    -- Sky infrastructure
    Sky.Sky.ModuleName
    Sky.Sky.Toml

    -- CLI helpers
    Sky.Cli.Watch


test-suite sky-tests
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  -- 'src' is here so unit-test specs can import library modules
  -- directly (today only Sky.Build.FfiTypeParser; bigger surface
  -- to follow as we phase typed FFI through). Existing specs are
  -- blackbox — they spawn the `sky` binary and inspect stdout —
  -- so they don't pay any build-time cost from this addition.
  hs-source-dirs:   test, src
  default-language: Haskell2010
  ghc-options:      -Wall -Wno-unused-imports -Wno-name-shadowing -threaded

  build-tool-depends: sky-compiler:sky
  build-depends:
      base >= 4.14 && < 5
    , hspec >= 2.9
    , process >= 1.6
    , directory >= 1.3
    , filepath >= 1.4
    , bytestring >= 0.11
    , containers >= 0.6
    , text >= 1.2
    , temporary >= 1.3
    , aeson >= 2.0
    , vector >= 0.12
    , time >= 1.9

  other-modules:
      Sky.Build.Validator
      Sky.Build.CompileSpec
      Sky.Build.DepHmFatalSpec
      Sky.Build.ExampleSweepSpec
      Sky.Build.ForeignFatalSpec
      Sky.Build.TypedFfiSpec
      Sky.ErrorUnificationSpec
      Sky.Parse.PatternSpec
      Sky.Parse.MultiLineExposingSpec
      Sky.Parse.MultiLineParenAppSpec
      Sky.Parse.MultiLineRecordFieldSpec
      Sky.Canonicalise.ExposingSpec
      Sky.Canonicalise.KernelFallbackSpec
      Sky.Canonicalise.UnboundSpec
      Sky.Canonicalise.QualifiedTypeAliasSpec
      Sky.Type.ExhaustivenessSpec
      Sky.Type.AnyWildcardSpec
      Sky.Type.TupleLambdaSpec
      Sky.Type.UiOnSubmitTypedRecordSpec
      Sky.Type.RecordFieldExactnessSpec
      Sky.Type.InstanceCaptureSpec
      Sky.Format.FormatSpec
      Sky.Build.GoKeywordCollisionSpec
      Sky.Build.NestedPatternSpec
      Sky.Build.ConsCtorPatternSpec
      Sky.Build.CtorConsPatternSpec
      Sky.Build.EnvPrefixSpec
      Sky.Build.FfiGenMultiSpec
      Sky.Build.FfiTypeParserSpec
      Sky.Build.TaskResultBridgesSpec
      Sky.Build.CheckIsBuildSpec
      Sky.Build.RecordFieldOrderSpec
      Sky.Build.RecordCtorEmptyListSpec
      Sky.Build.HofTypedMsgSpec
      Sky.Build.Issue52Spec
      Sky.Build.ValidatorSpec
      Sky.Build.GoBuildRefinerSpec
      Sky.Build.MonomorphiseSpec
      Sky.Build.MonoIntegrationSpec
      Sky.Reporting.DiagnosticSpec
      Sky.Diagnostics.CoverageSpec
      Sky.Build.KernelSigCoverageSpec
      Sky.Build.HeapBoundedHmSpec
      Sky.Build.SolverBudgetSpec
      Sky.Build.UnreachableGateSpec
      Sky.Parse.CommentsSpec
      Sky.Lsp.Harness
      Sky.Lsp.DiagnosticsSpec
      Sky.Lsp.HoverTypesSpec
      Sky.Lsp.HoverShadowingSpec
      Sky.Lsp.RenameStableSpec
      Sky.Build.VerifyScenarioSpec
      Sky.Build.VerifyAllSpec
      Sky.Lsp.ProtocolSpec
    , Sky.Lsp.CapabilitiesSpec
    , Sky.Lsp.CompletionSpec
    , Sky.Lsp.ScaleSpec
    , Sky.Build.EmbeddedRuntimeSpec
    , Sky.Build.EmbeddedInspectorSpec
    , Sky.Cli.ExitCodesSpec
    , Sky.Cli.InitSpec
    , Sky.Cli.RunSpec
    , Sky.Cli.FmtSpec
    , Sky.Cli.CleanSpec
    , Sky.Cli.TestSpec
    , Sky.Cli.UpgradeClaudeSpec
    , Sky.Cli.WatchSpec
